--- a/GendocsForms/Forms/FrmContactos.resx
+++ b/GendocsForms/Forms/FrmContactos.resx
@@ -150,17 +150,22 @@
         HOpj0ipVCn1kJ9gN9zT5PP6KKdxG1fkN9fJ1rbKElVfVN+n1qG6NFkgoAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="btnLimpiarFiltros.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="BtnLimpiarControles.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAVdJREFUSEvt
-        1M8qRGEYx/FD2aCREgsWRrFVWAglZTUrZeMOKLkAZeEaWMlSLsFVWCE2SKIsSBQLyp/v98x5c5JyZs5R
-        lF99mnPexfO88z7vTPQX04CO6mPxsfg6zlB4E4uv4Q0byXth+S8eNWEWc2hxgVjMgVrcz7qLd2EXFtIp
-        elFI8VFcwEIrmMYNHpK1XMUX8QR37L228GAiNPGb1JxmbMEd7qAdFvqqic1LyJx+7OMFq2hEyOcm43AT
-        C8iUGdzhFhUXyAhaq49x0k3mkbnBMl6xhz4XyCQ858347SOhicXP0YZv4225xzF6MAWLH6IT6TgTz/4S
-        ZReyJjRxd484gr8Bhx7iTBz8M8ZcqDWhicfl+Q/hCt5/4+A9mqX4rc6EJie4hsfRDQfv7dpG7oQm7nYC
-        Dt7bdYDwX5Q76cF7u7zCAyg0w3DnzsR/0x+J38TfyW9MFL0DF+NdLrFnRugAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAdBJREFUWEft
+        1r1KHGEUh/GFmFiIlUjEXICSQqNo4UfwGiQxRVDSpItYpNHSUoSksrVVrDQEbdQiBL0BBZMqhQqBxM8k
+        jYrmeXBeGIbZYndnR5D9w4+ZOezueefraKGWnNOCd7e7+cfme7jBuIU88xi7sPk3tCK31JrXmmfevBnz
+        +I6veIWQ+Kvm1uNM04592CBuGlVvPowz2GAHT/EWl1HtV7TNvHkdZnENG8imL2HcxheRaXPv9zpC00lM
+        RcdXeA3zAhewPmMhi/TjAP7oTwwhxHseFpV2JUYtVJIJhDPawhMkk7aIMVjzOSgrDViAP6I5PEKxJBfR
+        FB3/QclpQxgg/+DZhHRgEz4TycQXsRHt+9yUlB6cwi//QCdC3A+v2EcLKQmLkGffhZLiZf4Ef+AI3TDP
+        8BvWP6PY7XgPP3OOAQvlJLmIN9HW41XUIy2+HV5+58SIhUoSX0SwBps/RLKBb4evqJ/7YCGLxBfhWfXh
+        AZaimoPI+LltWPsCJ2ZmSd6OlWj/GD4XxlfU2iEy/8NjXMQybKK/GIRxBFtzWD23UK3EF3GCXjgTnBPW
+        nJhVT/J2OCfcX0RuSd4O/9VqRK4JV8KJ6di+k7gIx/Z9SaHwH89hpV0YeHbMAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>176, 17</value>
+  </metadata>
   <metadata name="cmsMenuColumnas.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
